removing scrollbar fixes in game media queries

--- a/game.css
+++ b/game.css
@@ -173,21 +173,6 @@ main {
     border-radius: 0;
   }
 
-  scrollbar-track,
-  ::-webkit-scrollbar-track {
-    border-radius: 0;
-  }
-  
-  scrollbar-corner,
-  ::-webkit-scrollbar-corner {
-    border-radius: 0;
-  }
-   
-  scrollbar-thumb,
-  ::-webkit-scrollbar-thumb {
-    border-radius: 0;
-  }
-
   #container {
     justify-content: center;
   }
